<resources>
    <string name="app_name">Amoba</string>

    //Login de usuario
    <string name="login_welcome">BIENVENIDO ESPECIALISTA</string>
    <string name="email">Dirección de email</string>
    <string name="password">Tu contraseña</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="remember_password">¿Olvidaste tu contraseña?</string>
    <string name="patients_name">Nombre de paciente</string>
    <string name="age">años</string>


    //Lista de pacientes
    <string name="patients_current_fragment">PACIENTES ACTUALES</string>
    <string name="patient_current">Paciente actual</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Cerrar sesión</string>
    <string name="invalid_fields">Campos invalidos!</string>
    <string name="an_error_occurred">Ocurrió un error</string>
    <string name="months">meses</string>
    <string name="ci">C.I.</string>
    <string name="wantTologout">¿Desea cerrar sesión?</string>
    <string name="cancel">Cancelar</string>
    <string name="exit">Salir</string>
    <string name="not_available">No disponible</string>
    <string name="function_to_develop">Función a desarrollar</string>
    <string name="ok">Ok</string>
    <string name="todo">TODO</string>
    <string name="ic">IC</string>
    <string name="iv_n_cordero">Iván Cordero</string>

    <string name="ci_number">C.I. 010525436-7</string>
    <string name="colby_mitchell_gmail_com">colby.mitchell @gmail.com</string>
    <string name="_40_a_os">40 años</string>
    <string name="_5_meses">5 meses</string>
    <string name="age_static">Edad</string>
    <string name="male">Masculino</string>
    <string name="sex">Sexo</string>
    <string name="address">987 Gusikowski Inlet Apt. 615</string>
    <string name="address_static">Dirección</string>
    <string name="phone_number">+6436100863112</string>
    <string name="mobile_number">+8316702194809</string>
    <string name="mobile">Celular</string>
    <string name="view_medical">VER FICHA MÉDICA</string>
    <string name="phone">Teléfono</string>


</resources>