<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.DetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimens_20">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_20"
                android:src="@drawable/icon_amoba"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimens_1"
                android:layout_marginTop="@dimen/dimens_40"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />


            <LinearLayout
                android:id="@+id/linearLayout_profile"
                android:layout_width="@dimen/dimens_50"
                android:layout_height="@dimen/dimens_50"
                android:layout_marginStart="@dimen/dimens_16"
                android:layout_marginTop="@dimen/dimens_16"
                android:background="@drawable/shape_profile"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">


                <TextView
                    android:id="@+id/initial_letters_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/ic"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_25"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_70"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout_profile"
                app:layout_constraintStart_toEndOf="@+id/linearLayout_profile"
                app:layout_constraintTop_toTopOf="@+id/linearLayout_profile"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textView_name_patient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_20"
                    android:fontFamily="@font/sofiapro"
                    android:text="@string/iv_n_cordero"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tex_size_max_18"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout_profile"
                    app:layout_constraintTop_toTopOf="@+id/linearLayout_profile" />


                <TextView
                    android:id="@+id/textView_patient_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_20"
                    android:fontFamily="@font/sofiapro"
                    android:text="@string/patient_current"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimens_20"
                android:src="@drawable/icon_exit"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout_profile"
                android:focusable="true" />

            <LinearLayout
                android:id="@+id/linearLayout_ci_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_50"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout_perfil"
                app:layout_constraintStart_toStartOf="@+id/linearLayout_profile"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_perfil">

                <TextView
                    android:id="@+id/textView_ci"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiapro"
                    android:gravity="center"
                    android:text="@string/ci_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tex_size_max_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_15"
                    android:fontFamily="@font/sofiapro"
                    android:gravity="center"
                    android:text="@string/colby_mitchell_gmail_com"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tex_size_max_18"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_1"
                android:layout_marginStart="@dimen/dimens_60"
                android:layout_marginTop="@dimen/dimens_20"
                android:layout_marginEnd="@dimen/dimens_60"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_ci_email" />

            <LinearLayout
                android:id="@+id/linearLayout_age_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_25"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout_perfil"
                app:layout_constraintStart_toStartOf="@+id/linearLayout_profile"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                app:layout_marginBaseline="@dimen/dimens_20">

                <LinearLayout
                    android:id="@+id/linearLayout_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimens_5"
                        android:fontFamily="@font/sofiapro"
                        android:text="@string/_40_a_os"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tex_size_max_18"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimens_5"
                        android:fontFamily="@font/sofiapro"
                        android:text="@string/_5_meses"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tex_size_max_18"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_age_static"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sofiapro"
                        android:text="@string/age_static"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/text_size_14"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_20"
                    android:layout_marginTop="@dimen/dimens_10"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sofiapro"
                        android:text="@string/male"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tex_size_max_18"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_sex_static"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sofiapro"
                        android:gravity="center"
                        android:text="@string/sex"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/text_size_14"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_1"
                android:layout_marginStart="@dimen/dimens_100"
                android:layout_marginTop="@dimen/dimens_24"
                android:layout_marginEnd="@dimen/dimens_100"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_age_sex" />

            <LinearLayout
                android:id="@+id/linearLayout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_24"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout_perfil"
                app:layout_constraintStart_toStartOf="@+id/linearLayout_profile"
                app:layout_constraintTop_toBottomOf="@+id/view3">

                <TextView
                    android:id="@+id/textView_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiapro"
                    android:gravity="center"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tex_size_max_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_address_static"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiapro"
                    android:gravity="center"
                    android:text="@string/address_static"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_1"
                android:layout_marginStart="@dimen/dimens_120"
                android:layout_marginTop="@dimen/dimens_24"
                android:layout_marginEnd="@dimen/dimens_120"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_address" />

            <LinearLayout
                android:id="@+id/linearLayout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_24"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout_perfil"
                app:layout_constraintStart_toStartOf="@+id/linearLayout_profile"
                app:layout_constraintTop_toBottomOf="@+id/view4">

                <TextView
                    android:id="@+id/textView_number_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiapro"
                    android:gravity="center"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tex_size_max_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_phone_static"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiapro"
                    android:gravity="center"
                    android:text="@string/phone"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_24"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout_perfil"
                app:layout_constraintStart_toStartOf="@+id/linearLayout_profile"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_phone">

                <TextView
                    android:id="@+id/textView_number_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiapro"
                    android:gravity="center"
                    android:text="@string/mobile_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tex_size_max_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_mobile_static"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sofiapro"
                    android:gravity="center"
                    android:text="@string/mobile"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_size_14"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/button_view_medical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_50"
                android:layout_marginStart="@dimen/dimens_29"
                android:layout_marginTop="@dimen/dimens_36"
                android:layout_marginEnd="@dimen/dimens_29"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:background="@drawable/shape_bottom"
                android:fontFamily="@font/sofiapro"
                android:gravity="center"
                android:text="@string/view_medical"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout_mobile"
                app:layout_constraintStart_toStartOf="@+id/linearLayout_mobile"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_mobile"
                android:focusable="true" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>