<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome"
        app:layout_constraintVertical_bias="0.22000003" />

    <ImageView
        android:id="@+id/imageView_logo_amoba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_79"
        android:layout_marginTop="@dimen/dimens_20"
        android:layout_marginEnd="@dimen/dimens_79"
        android:layout_marginBottom="@dimen/dimens_20"
        android:src="@drawable/icon_amoba"
        app:layout_constraintBottom_toTopOf="@+id/imageView_login_vector"
        app:layout_constraintEnd_toEndOf="@+id/imageView_login_vector"
        app:layout_constraintStart_toStartOf="@+id/imageView_login_vector"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView_login_vector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_63"
        android:layout_marginEnd="@dimen/dimens_63"
        android:layout_marginBottom="@dimen/dimens_46"
        android:src="@drawable/icon_people"
        app:layout_constraintBottom_toTopOf="@+id/textView_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_20"
        android:layout_marginEnd="@dimen/dimens_20"
        android:layout_marginBottom="@dimen/dimens_36"
        android:fontFamily="@font/bebas_neue"
        android:gravity="center"
        android:text="@string/login_welcome"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_max_26"
        app:layout_constraintBottom_toTopOf="@+id/editText_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_50"
        android:layout_marginStart="@dimen/dimens_20"
        android:layout_marginEnd="@dimen/dimens_20"
        android:layout_marginBottom="@dimen/dimens_24"
        android:width="@dimen/dimens_3"
        android:background="@drawable/shape_bottom"
        android:drawableStart="@drawable/icon_user"
        android:drawablePadding="@dimen/dimens_20"
        android:elevation="@dimen/dimens_10"
        android:ems="10"
        android:fontFamily="@font/sofiapro"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/dimens_10"
        android:textSize="@dimen/tex_size_max_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText_Password"
        app:layout_constraintEnd_toEndOf="@+id/textView_welcome"
        app:layout_constraintStart_toStartOf="@+id/textView_welcome"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/dimens_20"
        android:layout_marginTop="@dimen/dimens_24"
        android:layout_marginEnd="@dimen/dimens_20"
        android:width="@dimen/dimens_3"
        android:background="@drawable/shape_bottom"
        android:baselineAligned="false"
        android:drawableStart="@drawable/icon_password"
        android:drawablePadding="@dimen/dimens_20"
        android:elevation="@dimen/dimens_10"
        android:ems="10"
        android:fontFamily="@font/sofiapro"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dimens_10"
        android:textSize="@dimen/tex_size_max_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText_email"
        app:layout_constraintStart_toStartOf="@+id/editText_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_email"
        tools:ignore="MissingConstraints,RtlSymmetry"
        android:autofillHints="" />


    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_50"
        android:layout_marginStart="@dimen/dimens_29"
        android:layout_marginTop="@dimen/dimens_29"
        android:layout_marginEnd="@dimen/dimens_29"
        android:background="@drawable/shape_bottom"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/sofiapro"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText_Password"
        app:layout_constraintStart_toStartOf="@+id/editText_Password"
        app:layout_constraintTop_toBottomOf="@+id/editText_Password" />

    <TextView
        android:id="@+id/textView_remember_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_10"
        android:layout_marginBottom="@dimen/dimens_50"
        android:fontFamily="@font/sofiapro"
        android:gravity="center"
        android:text="@string/remember_password"
        android:textColor="@color/gray"
        android:textSize="@dimen/tex_size_max_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96107054" />


</androidx.constraintlayout.widget.ConstraintLayout>